take a screenshot before closing browser

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,11 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run: yarn test
+
       - store_artifacts:
           path:  mochawesome-report
-          destination: mochawesome.html          
+          destination: mochawesome.html
+
+      - store_artifacts:
+          path:  screenshots
+          destination: screenshots     
